criação do procfile e de novo propertie

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	
 	<!-- ModelMapper -->
