Ajustes realizados para o deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.jpa.generate-ddl=true
 #spring.datasource.password=postgres
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
