--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+	
+	<dependency>
+  		<groupId>org.springframework.boot</groupId>
+  		<artifactId>spring-boot-starter-jdbc</artifactId>
+	</dependency>
 		
 	<!-- PostgreSQL -->
 		<dependency>
